# MakineAI-Plugin-OCR

./: CMakeLists.txt  LICENSE  README.md  manifest.json
src/: live_core.cpp  ocr_rapid.cpp  ocr_rapid.h  plugin.cpp  translator.cpp
